--- a/frontend/style.css
+++ b/frontend/style.css
@@ -23,6 +23,8 @@
 }
 
 body {
+  background: #ffffff;
+  position: relative;
   font-family: "Open Sans", Helvetica, Arial, sans-serif;
   color: #333;
   text-shadow: 0 1px 0 #fff;
@@ -101,7 +103,7 @@ section img {
 }
 
 section p {
-  padding: 0 0 20px;
+  padding: 100px 0 20px;
 }
 
 .btn1 {
@@ -494,10 +496,10 @@ input[id*="modal_"]:checked + div.modal .modal-content {
 }
 
 .rodape {
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(3, 79, 155);
   clear: both;
   padding: 10px;
-  color: rgb(250, 255, 250);
+  color: rgb(1, 224, 1);
   font-size: 15px;
   font-family: "arial, sans-serif";
 }
