--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -4,10 +4,17 @@
   text-decoration: none;
   list-style: none;
   box-sizing: border-box;
+  
 }
 
 body {
   font-family: roboto;
+  position: relative;
+  width: 1440px;
+  height: 3903px;
+  overflow-y: scroll;
+
+  background: #FFFFFF;
 }
 
 /* Menu principal */
@@ -18,7 +25,7 @@ body {
   left: 221px;
   top: 45px;
 
-  font-family: pecita;
+  font-family: Pecita;
   font-style: normal;
   font-weight: normal;
   font-size: 40px;
@@ -116,8 +123,16 @@ a:hover {
 
 /* Background menu principal */
 .men {
-  width: 100%;
-  height: 839px;
+  
+  position: absolute left;
+  width: 1440px;
+  height: 894px;
+  left: 0px;
+  top: 0px;
+  background: linear-gradient(180deg, #F9A826 0%, rgba(255, 255, 255, 0) 20.31%),
+  linear-gradient(180deg, rgba(252, 172, 50, 0.6) 0%, rgba(255, 255, 255, 0) 25.52%),
+  linear-gradient(89.91deg, rgba(81, 80, 76, 0.5) 25.08%, rgba(128, 126, 121, 0) 56.43%), 
+  url(-7I5Z7zPXGY.png);
 }
 
 /* Texto da imagem inicial */
@@ -186,7 +201,8 @@ a:hover {
 
   background: #de8a0d;
   border-radius: 10px;
-  color: #ffffff;
+  border-color: transparent;
+  color: #FFFFFF;
 }
 
 .btn-pmat {
@@ -205,6 +221,7 @@ a:hover {
   height: 56px;
   left: 423px;
   top: 542px;
+  
 
   border: 1px solid #ffffff;
   box-sizing: border-box;
