--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -8,7 +8,7 @@
 }
 
 body {
-  font-family: roboto;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   position: relative;
   width: 1440px;
   height: 3903px;
@@ -39,7 +39,7 @@ body {
   height: 78px;
   left: 30px;
   top: 32px;
-  font-family: Roboto;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-style: normal;
   font-weight: bold;
   font-size: 20px;
@@ -98,6 +98,7 @@ nav ul li a {
 
   background: #2bafd9;
   border-radius: 10px;
+  border-color: transparent;
 
   /* P - Bold desktop */
 
@@ -145,7 +146,7 @@ a:hover {
 
   /* H1 - Regular */
 
-  font-family: Roboto;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-style: normal;
   font-weight: 300;
   font-size: 68px;
@@ -168,7 +169,7 @@ a:hover {
 
   /* Corpo - Regular */
 
-  font-family: Roboto;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 24px;
@@ -251,7 +252,7 @@ a:hover {
 
   /* H4 - Regular */
 
-  font-family: roboto;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 28px;
