Criação de outras páginas html
Alteração também na landing-page

--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -17,6 +17,14 @@ body {
   background: #FFFFFF;
 }
 
+.body-cadastro{
+  position: relative;
+width: 1440px;
+height: 1431px;
+
+background: #FFFFFF;
+}
+
 /* Menu principal */
 .text-logo {
   position: absolute;
@@ -33,6 +41,89 @@ body {
   text-align: center;
   color: #ffffff;
 }
+.text-logo-branco {
+  position: absolute;
+width: 272px;
+height: 48px;
+left: 221px;
+top: 45px;
+
+font-family: Pecita;
+font-style: normal;
+font-weight: normal;
+font-size: 40px;
+line-height: 49px;
+text-align: center;
+
+
+color: #DE8A0D;
+}
+.subtitulo{
+position: absolute;
+width: 372px;
+height: 176px;
+left: 202px;
+top: 303px;
+}
+
+.cadastro-aluno{
+  position: absolute;
+width: 151px;
+height: 24px;
+left: 943px;
+top: 922px;
+
+/* H6 - Regular */
+
+font-family: Roboto;
+font-style: normal;
+font-weight: normal;
+font-size: 16px;
+line-height: 150%;
+/* identical to box height, or 24px */
+
+text-align: center;
+}
+
+.mochila{
+  position: absolute;
+width: 418px;
+height: 313px;
+left: 156px;
+top: 537px;
+}
+
+.logo-form {
+position: absolute;
+width: 67px;
+height: 78px;
+left: 135px;
+top: 32px;
+
+background: url("/frontend/img/Logo.svg");
+}
+
+.corpo-form {
+  position: absolute;
+width: 1340px;
+height: 789px;
+left: 50px;
+top: 227px;
+
+border: 1px solid #CCCAC2;
+box-sizing: border-box;
+filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+border-radius: 20px;
+} 
+
+.body-box{
+  position: absolute;
+width: 1340px;
+height: 789px;
+left: 50px;
+top: 227px;
+}
+
 .menu {
   position: absolute;
   width: 970px;
@@ -98,6 +189,7 @@ nav ul li a {
 
   background: #2bafd9;
   border-radius: 10px;
+  border-color: transparent;
 
   /* P - Bold desktop */
 
@@ -201,6 +293,7 @@ a:hover {
 
   background: #de8a0d;
   border-radius: 10px;
+  border-color: transparent;
   color: #ffffff;
 }
 
@@ -306,6 +399,7 @@ a:hover {
   border-radius: 10px;
   transition: all 0.5s;
   cursor: pointer;
+  border-color: transparent;
 }
 
 .button span {
